--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -182,6 +182,8 @@ legend {
     place-self: start left;
   }
   
+  
+  /* form-sizing: normal; */
   & input {
     --text-font-size: var(--fs-600);
     font-size: var(--text-font-size);
